<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimens_layout_padding_25"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_layout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimens_margin_register_30"
        android:text="@string/tv_register"
        android:textSize="@dimen/dimens_register_text_42"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_name"
        android:layout_marginTop="@dimen/dimens_margin_register_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        app:helperTextEnabled="true"
        app:helperText="@string/required_text"
        app:helperTextTextColor="@color/helper_text_color"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_input_margin_top_30"
        android:hint="@string/phone_number_hint"
        app:helperText="@string/required_text"
        app:helperTextTextColor="@color/helper_text_color"
        app:layout_constraintTop_toBottomOf="@id/tl_name"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/required_text"
        android:layout_marginTop="@dimen/dimens_input_margin_top_30"
        android:hint="@string/email_address_hint"
        app:helperTextTextColor="@color/helper_text_color"
        app:layout_constraintTop_toBottomOf="@id/tl_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_input_margin_top_30"
        android:hint="@string/sex_hint"
        app:helperText="@string/required_text"
        app:helperTextTextColor="@color/helper_text_color"
        app:layout_constraintTop_toBottomOf="@id/tl_email"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/sex_drop_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_input_margin_top_30"
        app:layout_constraintTop_toBottomOf="@id/tl_sex"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/register_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>